# SolarPi

./: .gitignore  README.md  install.sh  solar_tracker.kicad_prl  solar_tracker.kicad_pro  solar_tracker.kicad_sch
src/: CMakeLists.txt  solar.c
